# risk_and_returns

./: extract_historical_data.py  main.py  pyproject.toml  requirements.txt
extracted_data/: .~lock.out.csv#  BRK-B.csv  GME.csv  HP.csv  NVDA.csv  TSLA.csv  companies_index.csv  out.csv  spy.csv
returns_charts/: brkb_returns_comparison.html  gme_returns_comparison.html  hp_returns_comparison.html  nvda_returns_comparison.html  returns_chart.html  tsla_returns_comparison.html
std_charts/: brkb_std_comparison.html  gme_std_comparison.html  hp_std_comparison.html  nvda_std_comparison.html  std_chart.html  tsla_std_comparison.html
