[project]
name = "investment-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "polars>=1.22.0",
    "pyarrow>=19.0.1",
    "vl-convert-python>=1.7.0",
    "yfinance>=0.2.54",
]
